--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,3 +10,23 @@ services:
       - "8080:8080"
     environment:
       - TZ=America/Bogota
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://postgres:5432/socialdb
+      - SPRING_DATASOURCE_USERNAME=postgres
+      - SPRING_DATASOURCE_PASSWORD=postgres
+    depends_on:
+      - postgres
+
+  postgres:
+    image: postgres:15
+    container_name: social-postgres
+    environment:
+      POSTGRES_DB: socialdb
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+    ports:
+      - "5432:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+
+volumes:
+  postgres_data:
