--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,19 @@
 spring:
-   application:
-      name: appgate-challenge
+  application:
+    name: appgate-challenge
+  datasource:
+    url: jdbc:postgresql://postgres:5432/socialdb
+    username: postgres
+    password: postgres
+    driver-class-name: org.postgresql.Driver
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
+  sql:
+    init:
+      platform: postgres
+
 springdoc:
    api-docs:
       path: /api-docs
