--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,21 @@
-version: '3.8'
-
 services:
+  postgres:
+    image: postgres:15
+    container_name: social-postgres
+    environment:
+      POSTGRES_DB: socialdb
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+    ports:
+      - "5432:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+
   appgate-social-media-analyzer:
     container_name: appgate-social-media-analyzer
     build:
@@ -14,19 +29,7 @@ services:
       - SPRING_DATASOURCE_USERNAME=postgres
       - SPRING_DATASOURCE_PASSWORD=postgres
     depends_on:
-      - postgres
-
-  postgres:
-    image: postgres:15
-    container_name: social-postgres
-    environment:
-      POSTGRES_DB: socialdb
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-    ports:
-      - "5432:5432"
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
-
+      postgres:
+        condition: service_healthy
 volumes:
   postgres_data:
